--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
                                 Deutschland.</a><br><br>
                             <a style="color:rgb(233, 194, 91)" href="mailto:kontakt@tm-marketingservice.de"><i
                                     class="fas fa-envelope mr-3"></i> kontakt@tm-marketingservice.de</a><br><br>
-                            <a style="color:rgb(233, 194, 91)" href="callto:+49 176 849 577 95"><i
-                                    class="fas fa-phone mr-3"></i> +49 176 849 577 95</a><br><br>
+                            <a style="color:rgb(233, 194, 91)" href="tel:+4917684957795"><i
+                                    class="fas fa-phone mr-3"></i> +49-176-849-57795</a><br><br>
                             <a type="button" class="btn btn-primary"
                                 style="border-radius: 25px;background-color: #40BF50;" href="https://wa.link/jcovol"
                                 target="_blank">Chatten Sie uns an <i style="color:white"
@@ -447,19 +447,20 @@
                             <h3 class="text-uppercase mb-4 font-weight-bold">Follow us</h3>
 
                             <!-- Facebook -->
-                            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/TM-Marketingservice/?locale=de_D"
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
+                                target="_blank" href="https://www.facebook.com/profile.php?id=100093006522868"
                                 role="button"><i class="fab fa-facebook-f"></i></a>
 
 
                             <!-- Instagram -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #cc2366"
-                                href="https://www.instagram.com/tm.marketingservice/" role="button"><i
+                                target="_blank" href="https://www.instagram.com/tm.marketingservice/" role="button"><i
                                     class="fab fa-instagram"></i></a>
 
                             <!-- Linkedin -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca"
-                                href="https://www.linkedin.com/in/tm-marketingservice-1aa2b8271/" role="button"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                target="_blank" href="https://www.linkedin.com/in/tm-marketingservice-1aa2b8271/"
+                                role="button"><i class="fab fa-linkedin-in"></i></a>
 
                         </div>
                     </div>
@@ -496,9 +497,10 @@
 
             // Perform form validation
             if (name.trim() === '' || company.trim() === '' || phone.trim() === '' || email.trim() === '' || contact.trim() === '' || reason.trim() === '') {
-                alert('Please fill in all required fields.');
+                alert('Bitte füllen Sie alle erforderlichen Felder aus.');
                 return; // Stop further execution
             }
+            alert("Ihr Formular wurde erfolgreich übermittelt. Unser Team wird Sie in Kürze kontaktieren.")
 
             // Form values passed validation, proceed with form submission
             document.getElementById('my_form').submit();
@@ -508,3 +510,4 @@
 
 
 </body>
+</html>
