color change to data privacy sentence

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <option class="op" value="Software solution">Software solution</option>
                         <option class="op" value="Other">Andere</option>
                     </select><br><br>
-                    <p class="fs-5" style="color:rgb(255, 255, 255)">Durch das klicken auf der Schaltfläche "Buchung
+                    <p class="fs-5" >Durch das klicken auf der Schaltfläche "Buchung
                         stornieren", akzeptieren Sie unsere <a class="fs-5" href="dataprivacy.html"
                             target="_blank">DSGVO und AGB.</a></p><br>
                     <button type="submit" class="btn btn-primary" style="background-color:green;border-radius:25px ; color:white ">
