About image shift towards right

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class=" row brow">
             <div class="col-sm-6 about"><br><br>
 
-                <img src="about.png" class="img-fluid" style="position:relative;left:0;padding-bottom: 0; width:65%">
+                <img src="about.png" class="img-fluid" style="position:relative;left:3%;padding-bottom: 0; width:65%">
             </div>
             <div class="col-sm-6 " style="padding-left:13px; padding-right: 13px;" >
                 Willkommen bei <b>TM-Marketing Service</b>, wir sind die Experten für digitales Marketing und
