--- a/impressum.html
+++ b/impressum.html
@@ -1,3 +1,14 @@
+<head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QX4PF6TFZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QX4PF6TFZ');
+</script>
+</head>
 <h2>Impressum</h2>
 <p>T. Mohammed und C. Tobos Gbr<br />
 Josef-Poppelreuter-Straße 7<br />51107 Köln</p>
