--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
     <title>TM-Marketing Service Gbr</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QX4PF6TFZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-7QX4PF6TFZ');
+    </script>
     <link rel="icon" type="image/x-icon" href="https://drive.google.com/thumbnail?id=1zwfoO7jftR74XwKbdmyYXKtyWCDpFHx3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
@@ -291,7 +300,7 @@
 
                 <img src="about.png" class="img-fluid" style="position:relative;left:3%;padding-bottom: 0; width:65%">
             </div>
-            <div class="col-sm-6 " style="padding-left:13px; padding-right: 13px;" >
+            <div class="col-sm-6 " style="padding-left:13px; padding-right: 13px;">
                 Willkommen bei <b>TM-Marketing Service</b>, wir sind die Experten für digitales Marketing und
                 Webentwicklung.
                 Spezialisiert sind wir auf Google Ads, Meta Ads, Analytische Dashboards, Webentwicklung und die
