updated google tag

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="de">
 
 <head>
-    <title>TM-Marketing Service Gbr</title>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QX4PF6TFZ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M585Q9SB7G"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-7QX4PF6TFZ');
+        gtag('config', 'G-M585Q9SB7G');
     </script>
+    <title>TM-Marketing Service Gbr</title>
+
     <link rel="icon" type="image/x-icon" href="https://drive.google.com/thumbnail?id=1zwfoO7jftR74XwKbdmyYXKtyWCDpFHx3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
