--- a/impressum.html
+++ b/impressum.html
@@ -1,14 +1,17 @@
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M585Q9SB7G"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-M585Q9SB7G');
-    </script>
+     <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NNRS5GX');</script>
+    <!-- End Google Tag Manager -->
 </head>
+<body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NNRS5GX"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 <h2>Impressum</h2>
 <p>T. Mohammed und C. Tobos Gbr<br />
     Josef-Poppelreuter-Straße 7<br />51107 Köln</p>
@@ -50,3 +53,4 @@ Die Darstellung dieser Website in fremden Frames ist nur mit schriftlicher Erlau
 Soweit besondere Bedingungen für einzelne Nutzungen dieser Website von den vorgenannten Paragraphen abweichen, wird an
 entsprechender Stelle ausdrücklich darauf hingewiesen. In diesem Falle gelten im jeweiligen Einzelfall die besonderen
 Nutzungsbedingungen.<p>Quelle: <a href="https://www.juraforum.de">zum Artikel</a></p>
+</body>
