--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="de">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M585Q9SB7G"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-M585Q9SB7G');
-    </script>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NNRS5GX');</script>
+    <!-- End Google Tag Manager -->
     <title>TM-Marketing Service Gbr</title>
 
     <link rel="icon" type="image/x-icon" href="https://drive.google.com/thumbnail?id=1zwfoO7jftR74XwKbdmyYXKtyWCDpFHx3">
@@ -201,6 +199,10 @@
 </head>
 
 <body style="background-color: black;">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NNRS5GX"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container-fullwidth m-0 p-0">
 
 
