Added title to data privacy and impressum pages

--- a/dataprivacy.html
+++ b/dataprivacy.html
@@ -6,6 +6,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-NNRS5GX');</script>
     <!-- End Google Tag Manager -->
+	<title>Datenschutz</title>
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
