font and button size change in impre and dp

--- a/impressum.html
+++ b/impressum.html
@@ -15,6 +15,29 @@
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        * {
+            font-family: 'Trebuchet MS', sans-serif;
+            font-size: 1.8vw;
+            color: rgb(233, 194, 91);
+            margin: 0;
+            padding: 0;
+            scroll-behavior: smooth;
+            word-wrap: break-word;
+            width: 100
+        }
+
+        @media (max-width: 1000px) {
+            * {
+                font-family: 'Trebuchet MS', sans-serif;
+                font-size: 16px;
+                color: rgb(233, 194, 91);
+                margin: 0;
+                padding: 0;
+                scroll-behavior: smooth;
+                word-wrap: break-word;
+                width: 100
+            }
+        }
         button {
             background: #5469d4;
             font-family: Arial, sans-serif;
@@ -22,7 +45,7 @@
             border-radius: 4px;
             border: 0;
             padding: 12px 16px;
-            font-size: 16px;
+            
             font-weight: 600;
             cursor: pointer;
             display: block;
@@ -42,13 +65,13 @@
             bottom: 20px;
             right: 20px;
             z-index: 99;
-            font-size: 18px;
+            
             border: none;
             outline: none;
             background-color: rgb(248, 183, 5);
             color: rgb(255, 255, 255);
             cursor: pointer;
-            padding: 12px;
+            padding: 15px;
             border-radius: 50%;
         }
     </style>
