--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         .brow::before {
             content: "";
-            background-image: url(About_us.jpg);
+            
             background-size: cover;
             position: absolute;
             top: 0px;
@@ -347,7 +347,7 @@
         <div class=" row brow">
             <div class="col-sm-6 about"><br><br>
 
-                <img src="about.png" class="img-fluid" style="position:relative;left:3%;padding-bottom: 0; width:65%">
+                <img src="about_new.png" class="img-fluid" style="position:relative;left:3%;padding-bottom: 0; width:95%">
             </div>
             <div class="col-sm-6 " style="padding-left:13px; padding-right: 13px;">
                 Willkommen bei <b>TM-Marketing Service</b>, wir sind die Experten für digitales Marketing und
