about us spacing

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="col-sm-6 about"><br><br>
 
                 <img src="about_new.png" class="img-fluid" style="position:relative;left:3%;padding-bottom: 0; width:95%">
-            </div>
+            </div><br>
             <div class="col-sm-6 " style="padding-left:13px; padding-right: 13px;">
                 Willkommen bei <b>TM-Marketing Service</b>, wir sind die Experten für digitales Marketing und
                 Webentwicklung.
